--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,9 @@
 set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# origin Path
+set-option -g default-path $PWD
+
 set -g history-limit 1000
 set -g remain-on-exit off
 
