--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@
 # Increase history limit
 # set -g default-terminal "tmux"
 # set -g default-terminal "tmux-256color"
-set-option -g default-terminal "screen-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+ set-option -g default-terminal "screen-256color"
+ set-option -as terminal-overrides ",xterm-256color:Tc"
 
 # origin Path
 # set-option -g default-path $PWD
@@ -42,8 +42,8 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 
-bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+# bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
+# bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
 # ===================================
 # ===================================
