--- a/alacritty.yml
+++ b/alacritty.yml
@@ -10,7 +10,8 @@ font:
     #   - (Windows) Consolas
     #  family: Hack Nerd Font
     #  family: JetBrains Mono
-    family: sauceCodePro Nerd Font
+    #  family: sauceCodePro Nerd Font
+    family: Source Code Pro
     # The `style` can be specified to pick a specific face.
     style:
       Regular
