feat(git): add git proxy for https

--- a/.gitconfig
+++ b/.gitconfig
@@ -43,4 +43,8 @@
   colorMoved = default
 
 [http]
-	proxy = http://127.0.0.1:7890
+  proxy = http://127.0.0.1:7890
+
+[https]
+  proxy = http://127.0.0.1:7890
+
