feat(tmux): change tmux bg color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,9 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 
+# color
+set -g status-style bg=color24,fg=color193
+
 # bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
 # bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
