Add LFS, tmux color and conda git-lfs to dotfiles

--- a/.gitconfig
+++ b/.gitconfig
@@ -48,3 +48,8 @@
 [https]
   proxy = http://127.0.0.1:7890
 
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
