--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,8 @@ set -g mode-keys vi
 
 # color
 set -g status-style bg=color24,fg=color193
+set -g window-status-current-style bg=color34,fg=color234
+set -g pane-active-border-style bg=color24,fg=cyan
 
 # bind C-c run " tmux save-buffer - | xclip -i -sel clipboard"
 # bind C-v run " tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
