style: Update window layout and tmux colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,8 +43,8 @@ set -g mode-keys vi
 
 # color
 set -g status-style bg=color24,fg=color193
-set -g window-status-current-style bg=color34,fg=color234
-set -g pane-active-border-style bg=color24,fg=cyan
+set -g window-status-current-style bg=color172,fg=color234
+set -g pane-active-border-style fg=color172
 
 # ===================================
 # ===================================
