--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@
 # Increase history limit
 # set -g default-terminal "tmux"
 # set -g default-terminal "tmux-256color"
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
 set-option -as terminal-overrides ",xterm-256color:Tc"
 
 # origin Path
