--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,4 +52,7 @@ set -g pane-active-border-style fg=color172
 # ===================================
 # ===================================
 
-tmux_conf_copy_to_os_clipboard=true
+# tmux_conf_copy_to_os_clipboard=true
+set -s set-clipboard on
+# set -as terminal-features ',xterm-256color:clipboard'
+# set -as terminal-overrides ',xterm-256color:Ms=\E]52;%p1%s;%p2%s\007'
