chore: Create config softlinks

--- a/files/home_dotfiles/.tmux.conf
+++ b/files/home_dotfiles/.tmux.conf
@@ -56,3 +56,22 @@ set -g pane-active-border-style fg=color172
 set -s set-clipboard on
 # set -as terminal-features ',xterm-256color:clipboard'
 # set -as terminal-overrides ',xterm-256color:Ms=\E]52;%p1%s;%p2%s\007'
+
+
+##########################################################################3########33
+# ===================================
+# ===================================
+# =======      plugins      =========
+# ===================================
+# ===================================
+##########################################################################3########33
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin '2kabhishek/tmux2k'
+set -g @tmux2k-right-plugins "time"
+set -g @tmux2k-left-plugins "git"
+set -g @tmux2k-military-time true
+run '~/.tmux/plugins/tpm/tpm'
