--- a/files/config_dotfiles/alacritty.toml
+++ b/files/config_dotfiles/alacritty.toml
@@ -1,30 +1,67 @@
-[colors.bright]
-black = "0x6e7681"
-blue = "0x79c0ff"
-cyan = "0x39c5cf"
-green = "0x79c0ff"
-magenta = "0xbc8cff"
-red = "0xfdac54"
-white = "0xb1bac4"
-yellow = "0xe3b341"
+# Dracula theme for Alacritty
+# https://draculatheme.com/alacritty
+#
+# Color palette
+# https://spec.draculatheme.com
+#
+# Instructions
+# https://github.com/alacritty/alacritty/blob/master/extra/man/alacritty.5.scd
+[colors.primary]
+background = "#282a36"
+foreground = "#f8f8f2"
+bright_foreground = "#ffffff"
 
 [colors.cursor]
-cursor = "0xc9d1d9"
-text = "0x0d1117"
+text = "#282a36"
+cursor = "#f8f8f2"
+
+[colors.vi_mode_cursor]
+text = "CellBackground"
+cursor = "CellForeground"
+
+[colors.selection]
+text = "CellForeground"
+background = "#44475a"
 
 [colors.normal]
-black = "0x484f58"
-blue = "0x58a6ff"
-cyan = "0x39c5cf"
-green = "0x58a6ff"
-magenta = "0xbc8cff"
-red = "0xec8e2c"
-white = "0xb1bac4"
-yellow = "0xd29922"
+black = "#21222c"
+red = "#ff5555"
+green = "#50fa7b"
+yellow = "#f1fa8c"
+blue = "#bd93f9"
+magenta = "#ff79c6"
+cyan = "#8be9fd"
+white = "#f8f8f2"
 
-[colors.primary]
-background = "0x0d1117"
-foreground = "0xc9d1d9"
+[colors.bright]
+black = "#6272a4"
+red = "#ff6e6e"
+green = "#69ff94"
+yellow = "#ffffa5"
+blue = "#d6acff"
+magenta = "#ff92df"
+cyan = "#a4ffff"
+white = "#ffffff"
+
+[colors.search.matches]
+foreground = "#44475a"
+background = "#50fa7b"
+
+[colors.search.focused_match]
+foreground = "#44475a"
+background = "#ffb86c"
+
+[colors.footer_bar]
+background = "#282a36"
+foreground = "#f8f8f2"
+
+[colors.hints.start]
+foreground = "#282a36"
+background = "#f1fa8c"
+
+[colors.hints.end]
+foreground = "#f1fa8c"
+background = "#282a36"
 
 [cursor]
 style = "Block"
@@ -33,19 +70,19 @@ style = "Block"
 size = 18
 
 [font.bold]
-family = "Hack Nerd Font"
+# family = "FiraCode Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "Source Code Pro"
+# family = "FiraCode Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "Source Code Pro"
+# family = "FiraCode Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "FiraCode Nerd Font"
+# family = "FiraCode Nerd Font"
 style = "Regular"
 
 [window]
@@ -59,5 +96,5 @@ columns = 80
 lines = 25
 
 [window.padding]
-x = 0
-y = 2
+x = 8
+y = 8
