--- a/files/home_dotfiles/.tmux.conf
+++ b/files/home_dotfiles/.tmux.conf
@@ -73,5 +73,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin '2kabhishek/tmux2k'
 set -g @tmux2k-right-plugins "time"
 set -g @tmux2k-left-plugins "git"
-set -g @tmux2k-military-time true
+# set -g @tmux2k-military-time true
+# set -g @tmux2k-compact-windows true
+set -g @tmux2k-theme 'default'
+
 run '~/.tmux/plugins/tpm/tpm'
