--- a/files/home_dotfiles/.tmux.conf
+++ b/files/home_dotfiles/.tmux.conf
@@ -75,6 +75,6 @@ set -g @tmux2k-right-plugins "time"
 set -g @tmux2k-left-plugins "git"
 # set -g @tmux2k-military-time true
 # set -g @tmux2k-compact-windows true
-set -g @tmux2k-theme 'default'
+# set -g @tmux2k-theme 'default'
 
 run '~/.tmux/plugins/tpm/tpm'
