--- a/files/home/.aerospace.toml
+++ b/files/home/.aerospace.toml
@@ -16,7 +16,7 @@ after-startup-command = [
     # JankyBorders has a built-in detection of already running process,
     # so it won't be run twice on AeroSpace restart
     'exec-and-forget sketchybar',
-    'exec-and-forget borders active_color=#55fffc inactive_color=0xff494d64 width=8.0'
+    'exec-and-forget borders'
 ]
 
 # Notify Sketchybar about workspace change
@@ -62,8 +62,8 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 #                 Monitor pattern is the same as for 'workspace-to-monitor-force-assignment'.
 #                 See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
 [gaps]
-inner.horizontal = 0
-inner.vertical =   0
+inner.horizontal = 8
+inner.vertical =   2
 outer.left =       0
 outer.bottom =     0
 outer.top =        40
@@ -208,7 +208,7 @@ backspace = ['close-all-windows-but-current', 'mode main']
 
 alt-shift-h = ['join-with left', 'mode main']
 alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode main']
+alt-shift-k = ['join-with up', 'mode^ main']
 alt-shift-l = ['join-with right', 'mode main']
 
 ####################################
@@ -222,7 +222,7 @@ if.window-title-regex-substring = '(setting|设置)'
 run = 'layout floating'
 
 [[on-window-detected]]
-if.window-title-regex-substring = '^(excalidraw*|Excalidraw*)'
+if.window-title-regex-substring = '(excalidraw*|Excalidraw*)'
 run = 'layout floating'
 
 [[on-window-detected]]
