--- a/files/home/.aerospace.toml
+++ b/files/home/.aerospace.toml
@@ -16,12 +16,12 @@ after-startup-command = [
     # JankyBorders has a built-in detection of already running process,
     # so it won't be run twice on AeroSpace restart
     'exec-and-forget sketchybar',
-    'exec-and-forget borders'
+    'exec-and-forget borders',
 ]
 
 # Notify Sketchybar about workspace change
 exec-on-workspace-change = ['/bin/bash', '-c',
- 'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
+  'sketchybar --trigger aerospace_workspace_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE'
 ]
 
 # Start AeroSpace at login
@@ -66,7 +66,7 @@ inner.horizontal = 8
 inner.vertical =   2
 outer.left =       0
 outer.bottom =     0
-outer.top =        40
+outer.top =        36
 outer.right =      0
 
 # 'main' binding mode declaration
@@ -208,7 +208,7 @@ backspace = ['close-all-windows-but-current', 'mode main']
 
 alt-shift-h = ['join-with left', 'mode main']
 alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode^ main']
+alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
 ####################################
