--- a/files/home/.aerospace.toml
+++ b/files/home/.aerospace.toml
@@ -184,7 +184,7 @@ run = 'layout floating'
 
 [[on-window-detected]]
 if.window-title-regex-substring = '(Clash Verge)'
-run = 'layout floating'
+run = ['layout floating', 'move-node-to-workspace 8']
 
 [[on-window-detected]]
 if.window-title-regex-substring = '(Picture-in-Picture|画中画)'
